parser/tests/bad/expr08-2.st
% 'boolean' expression must have type 'bool'
%   if-then-else

if 1 then
  % empty
else
  % empty
end if
